// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Antavo's event destination action: all fields 1`] = `
Object {
  "account": "IB60PM0Tc",
  "action": "IB60PM0Tc",
  "api_key": "IB60PM0Tc",
  "customer": "IB60PM0Tc",
  "data": Object {
    "testType": "IB60PM0Tc",
  },
}
`;

exports[`Testing snapshot for Antavo's event destination action: required fields 1`] = `
Object {
  "action": "IB60PM0Tc",
  "api_key": "IB60PM0Tc",
  "customer": "IB60PM0Tc",
}
`;
